[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "order-matching-engine"
version = "1.0.0"
description = "Price-time priority limit order book matching engine"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Mehmet Serin" }]

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[tool.setuptools.packages.find]
where = ["."]
include = ["order_matching_engine*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
